force-app/main/default/objects/EcomAPI__c/EcomAPI__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>All Flags</label>
</CustomObject>