force-app/main/default/objects/EcomAPI__c/fields/CTA_trigger__c.field-meta.xml
<CustomField>
    <fullName>CTA_trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>CTA_trigger</label>
    <type>Checkbox</type>
</CustomField>