force-app/main/default/objects/EcomAPI__c/fields/IsActivated__c.field-meta.xml
<CustomField>
    <fullName>IsActivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsEcomActivated</label>
    <type>Checkbox</type>
</CustomField>