force-app/main/default/objects/EcomAPI__c/fields/IsContactTriggerActivated__c.field-meta.xml
<CustomField>
    <fullName>IsContactTriggerActivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsContactTriggerActivated</label>
    <type>Checkbox</type>
</CustomField>