force-app/main/default/objects/EcomAPI__c/fields/IsCustomizedPricetriggerActivated__c.field-meta.xml
<CustomField>
    <fullName>IsCustomizedPricetriggerActivated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>trigger Name : trg_customizePrice</description>
    <label>IsCustomizedPricetriggerActivated</label>
    <type>Checkbox</type>
</CustomField>