force-app/main/default/objects/EcomAPI__c/fields/IsecomordertrgActivated__c.field-meta.xml
<CustomField>
    <fullName>IsecomordertrgActivated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Apex Trigger : trg_onOrderAfterUpdate</description>
    <label>IsoldecomordertrgActivated</label>
    <type>Checkbox</type>
</CustomField>