force-app/main/default/objects/EcomAPI__c/fields/IsLeadTriggerActivated__c.field-meta.xml
<CustomField>
    <fullName>IsLeadTriggerActivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsoldLeadTriggerActivated</label>
    <type>Checkbox</type>
</CustomField>