force-app/main/default/objects/EcomAPI__c/fields/IsnewLeadtrgActivated__c.field-meta.xml
<CustomField>
    <fullName>IsnewLeadtrgActivated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trigger Name : newConvertLeadTrigger</description>
    <label>IsnewLeadtrgActivated</label>
    <type>Checkbox</type>
</CustomField>