force-app/main/default/objects/EcomAPI__c/fields/IsneworderTrgActivated__c.field-meta.xml
<CustomField>
    <fullName>IsneworderTrgActivated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trigger Name :Trg_onEcomOrderAfterUpdate</description>
    <label>IsneworderTrgActivated</label>
    <type>Checkbox</type>
</CustomField>