force-app/main/default/objects/EcomAPI__c/fields/IsoldcontacttrgActivated__c.field-meta.xml
<CustomField>
    <fullName>IsoldcontacttrgActivated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>triggerName : trg_onContactBeforeUpdateAfterInsert</description>
    <label>IsoldcontacttrgActivated</label>
    <type>Checkbox</type>
</CustomField>