force-app/main/default/objects/EcomAPI__c/fields/IsQuotationTrgActivated__c.field-meta.xml
<CustomField>
    <fullName>IsQuotationTrgActivated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trigger Name : trg_Quotation</description>
    <label>IsQuotationTrgActivated</label>
    <type>Checkbox</type>
</CustomField>