force-app/main/default/objects/EcomAPI__c/fields/IsQuoteAPIActivated__c.field-meta.xml
<CustomField>
    <fullName>IsQuoteAPIActivated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Apex Class: QuoteNotification</description>
    <label>IsQuoteAPIActivated</label>
    <type>Checkbox</type>
</CustomField>