force-app/main/default/objects/EcomAPI__c/fields/IsRequestCallbacktrgActivated__c.field-meta.xml
<CustomField>
    <fullName>IsRequestCallbacktrgActivated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trigger Name : trg_onRequesttoCallBack</description>
    <label>IsRequestCallbacktrgActivated</label>
    <type>Checkbox</type>
</CustomField>