force-app/main/default/objects/EcomAPI__c/fields/newDev_LeadTrigger__c.field-meta.xml
<CustomField>
    <fullName>newDev_LeadTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>For New Lead Trigger -2021</description>
    <label>newDev_LeadTrigger</label>
    <type>Checkbox</type>
</CustomField>