force-app/main/default/objects/EcomAPI__c/fields/ProjectSourceMappingTrigger__c.field-meta.xml
<CustomField>
    <fullName>ProjectSourceMappingTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ProjectSourceMappingTrigger</label>
    <type>Checkbox</type>
</CustomField>