force-app/main/default/objects/EcomAPI__c/fields/trg_Account__c.field-meta.xml
<CustomField>
    <fullName>trg_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>trg_Account</label>
    <type>Checkbox</type>
</CustomField>