force-app/main/default/objects/EcomAPI__c/fields/trg_onOrder_Attachment__c.field-meta.xml
<CustomField>
    <fullName>trg_onOrder_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>trg_onOrder_Attachment</label>
    <type>Checkbox</type>
</CustomField>