force-app/main/default/objects/EcomAPI__c/fields/trg_OnProjectBeforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>trg_OnProjectBeforeUpdate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>trg_OnProjectBeforeUpdate</label>
    <type>Checkbox</type>
</CustomField>