force-app/main/default/objects/EcomAPI__c/fields/trg_OnTaskAfterInsertUpdate__c.field-meta.xml
<CustomField>
    <fullName>trg_OnTaskAfterInsertUpdate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>trg_OnTaskAfterInsertUpdate</label>
    <type>Checkbox</type>
</CustomField>