force-app/main/default/objects/EcomAPI__c/fields/trg_OnTaskBeforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>trg_OnTaskBeforeUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>trg_OnTaskBeforeUpdate</label>
    <type>Checkbox</type>
</CustomField>